<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_dummy"
        android:id="@+id/tvDate"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <!-- невидимый элемент для центровки -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/tvCenter"
            android:visibility="invisible" />

        <!-- первая часть -->

        <!--
            базовый элемент правой половины первой части
            отступ от центра в dp слева
            отступ сверху в dp
            остальные элементы - alignLeft, below
        -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/smena1"
            android:id="@+id/tvDay"
            android:layout_alignLeft="@id/tvCenter"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/smena2"
            android:id="@+id/tvNight"
            android:layout_alignLeft="@id/tvDay"
            android:layout_below="@id/tvDay"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/smena3"
            android:id="@+id/tvAfterNight"
            android:layout_alignLeft="@id/tvDay"
            android:layout_below="@id/tvNight"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/smena4"
            android:id="@+id/tvHoliday"
            android:layout_alignLeft="@id/tvDay"
            android:layout_below="@id/tvAfterNight"/>

        <!--
            базовый элемент левой половины
            отступ от центра в dp справа
            baseline всей левой части по элементам правой части
        -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/holiday"
            android:id="@+id/textView4"
            android:layout_alignRight="@id/tvCenter"
            android:layout_alignBaseline="@id/tvHoliday"
            android:layout_marginRight="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/day"
            android:id="@+id/textView1"
            android:layout_alignLeft="@id/textView4"
            android:layout_alignBaseline="@id/tvDay"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/night"
            android:id="@+id/textView2"
            android:layout_alignLeft="@id/textView4"
            android:layout_alignBaseline="@id/tvNight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/afternight"
            android:id="@+id/textView3"
            android:layout_alignLeft="@id/textView4"
            android:layout_alignBaseline="@id/tvAfterNight"/>

        <!-- вторая часть -->

        <!--
            базовый элемент правой половины второй части
            отступ от верха в dp
            остальные элементы - alignLeft, below
        -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/smena1"
            android:id="@+id/textView5"
            android:layout_marginTop="170dp"
            android:layout_alignLeft="@id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/smena2"
            android:id="@+id/textView6"
            android:layout_below="@id/textView5"
            android:layout_alignLeft="@id/textView5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/smena3"
            android:id="@+id/textView7"
            android:layout_below="@id/textView6"
            android:layout_alignLeft="@id/textView5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/smena4"
            android:id="@+id/textView8"
            android:layout_below="@id/textView7"
            android:layout_alignLeft="@id/textView5"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/day"
            android:id="@+id/tvShift1"
            android:layout_alignLeft="@id/tvDay"
            android:layout_alignBaseline="@id/textView5"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/night"
            android:id="@+id/tvShift2"
            android:layout_alignLeft="@id/tvDay"
            android:layout_alignBaseline="@id/textView6"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/afternight"
            android:id="@+id/tvShift3"
            android:layout_alignLeft="@id/tvDay"
            android:layout_alignBaseline="@id/textView7"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/holiday"
            android:id="@+id/tvShift4"
            android:layout_alignLeft="@id/tvDay"
            android:layout_alignBaseline="@id/textView8"/>

        <Button
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_select_date"
            android:id="@+id/btnSelectDate"
            android:onClick="onClick"/>
    </RelativeLayout>

</LinearLayout>
